Fix bottom of page being hidden by irc bar

--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -109,7 +109,7 @@ section.banner {
 
 
 .container {
-  margin: 0 auto;
+  margin: 0 auto 50px;
   width: 840px; }
 
 section.column {
